cabal-version:      2.4
name:               Advent-Of-Code2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Digity
maintainer:         danny.gia.an.thai@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Advent-Of-Code2021-day5
    main-is:          part12.hs
    build-depends:    
        base ^>=4.16.0.0,
        split ^>=0.2.3.4
    hs-source-dirs:   day5
    default-language: Haskell2010
